assets/css/admin.scss
/* ... */
.wp_job_manager_meta_data {
	zoom: 1;

	&::before,
	&::after {
		content: "";
		display: table;
	}

	&::after {
		clear: both;
	}

	.form-field {
		width: 50%;
		line-height: 2em;
		float: left;
		box-sizing: border-box;
		padding: 0 12px 0 0;
		margin: 0 0 12px;
		clear: both;

		&:nth-child(even) {
			float: right;
			padding: 0 0 0 12px;
			clear: right;
		}

		&:nth-last-child(-n+2) {
			margin-bottom: 0;
			padding-bottom: 0;
			border-bottom: 0;
		}

		label {
			vertical-align: middle;
			display: block;
			font-weight: bold;
			margin: 0;
		}

		.tips {
			cursor: help;
			float: right;
			font-weight: normal;
			color: #999;
		}

		input {
			width: 100%;
			margin: 1px 0;
			-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
			-moz-box-sizing: border-box;    /* Firefox, other Gecko */
			box-sizing: border-box;         /* Opera/IE 8+ */
			vertical-align: middle;
		}

		input.checkbox,
		input.radio {
			width: auto;
			margin: 4px 2px;
			display: inline-block;
		}

		.description {
			display: block;
			color: #999;
		}

		&.form-field-checkbox .description {
			display: inline;
		}

		.file_url {
			display: flex;

			input {
				width: 75%;
			}
		}

		.button {
			margin-left: 4px;
		}

		.file_no_url {

			@keyframes flash {

				from {
					background-color: unset;
				}

				to {
					background-color: #dc3232;
				}
			}

			@include animation(flash 0.3s linear infinite alternate);
		}
	}
}

/* TipTip CSS - Version 1.2 */
#tiptip_holder {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 99999;
}

#tiptip_holder.tip_top {
	padding-bottom: 5px;
}

#tiptip_holder.tip_bottom {
	padding-top: 5px;
}

#tiptip_holder.tip_right {
	padding-left: 5px;
}

#tiptip_holder.tip_left {
	padding-right: 5px;
}

#tiptip_content {
	font-size: 11px;
	color: #fff;
	padding: 4px 8px;
	background: #464646;
	border-radius: 3px;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
	-webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
	-moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
	text-align: center;

	code {
		background: #999;
		padding: 1px;
	}
}

#tiptip_arrow,
#tiptip_arrow_inner {
	position: absolute;
	border-color: transparent;
	border-style: solid;
	border-width: 6px;
	height: 0;
	width: 0;
}

#tiptip_holder.tip_top #tiptip_arrow_inner {
	margin-top: -7px;
	margin-left: -6px;
	border-top-color: #464646;
}

#tiptip_holder.tip_bottom #tiptip_arrow_inner {
	margin-top: -5px;
	margin-left: -6px;
	border-bottom-color: #464646;
}

#tiptip_holder.tip_right #tiptip_arrow_inner {
	margin-top: -6px;
	margin-left: -5px;
	border-right-color: #464646;
}

#tiptip_holder.tip_left #tiptip_arrow_inner {
	margin-top: -6px;
	margin-left: -7px;
	border-left-color: #464646;
}

/* Addons */
.wp_job_manager_add_ons_wrap {
	max-width: 1244px;

	.products {
		display: grid;
		grid-template-columns: repeat(auto-fit, minmax(min(100%, 400px), 1fr));
		margin-top: 0;
		gap: 20px;
	}

	.product {
		display: flex;
		flex-direction: column;
		padding: 18px;
		background: #ffffff;
		border: 1px solid #cccccc;
		box-sizing: border-box;
		gap: 18px;

		.add-on-header {
			display: flex;
			flex-direction: row;
			gap: 16px;

			img {
				width: 48px;
				height: 48px;
				object-fit: contain;
				&.wpjm-core-bundle {
					border-radius: 50%;
				}
			}
			.title {
				font-size: 16px;
				font-weight: 600;
				line-height: 24px;
			}
			a {
				text-decoration: none;
			}
			a.button-secondary {
				align-self: center;
				text-decoration: none;
				padding: 8px 12px;
				line-height: 1.4em;
				border-radius: 2px;
				background: #ffffff;
			}
		}
		.add-on-body {
			p {
				line-height: 20px;
				color: #1E1E1E;
			}
		}
		.product-info {
			flex: 1 1 0;
			align-self: center;
		}
		.add-on-footer {
			display: flex;
			flex-direction: row;
			margin-top: auto;
			p {
				margin: 0;
			}
			a {
				align-self: center;
				text-decoration: none;
				margin-left: auto;
			}
		}
	}
}

.rtl {

	.widefat {

		.column-job_actions {

			a.button-icon {

				&::before {
					float: right;
				}
			}
		}
	}

	.wp_job_manager_meta_data {

		p {
			padding: 0 20% 0 0;
		}

		label {
			left: auto;
			right: 0;
		}
	}
}

/**
 * Settings
 */

table.form-table.settings {

	tr {
		border-bottom: 1px solid rgba(0, 0, 0, 0.1);

		&:last-child,
		&.no-separator {
			border-bottom: 0;
		}
	}
}

div.setting-enable-expand {
	border: 1px solid rgba(0, 0, 0, 0.1);
	padding: 15px 10px;

	.sub-settings-expandable {
		display: none;
		padding-left: 25px;

		&.expanded {
			display: block;
		}
	}
}

tr.email-setting-row {

	td {
		padding: 5px;
	}
}
/**
 * Extensions page
 */
.wp_job_manager_add_ons_wrap {
	.wpjm-extensions-filter-search {
		display: flex;
		margin-top: 18px;
		.wpjm-extension-search-input {
			padding: 9px 12px;
			border-radius: 2px;
			line-height: 20px;
			font-size: 13px;
		}
		.wpjm-extension-search-button {
			padding: 5px 12px;
			background: #ffffff;
		}
		.subsubsub {
			text-align: left;
			margin: 0;
			align-self: end;
			li {
				margin: 0 0 6px 0;
				a {
					padding: 6px 8px;
					background: #ffffff;
					border-radius: 2px;
					color: #3C434A;
					font-weight: 400;
					margin-right: 4px;
					font-size: 13px;
					&.current {
						background: #1E1E1E;
						color: #ffffff;
					}
				}
			}
		}
		.extension-search {
			margin-left: auto;
			align-self: center;
			display: flex;
		}
	}
}
@media screen and (max-width: 782px) {
	.wp_job_manager_add_ons_wrap .wpjm-extensions-filter-search {
		flex-direction: column-reverse;
		gap: 18px;

		.subsubsub {
			align-self: start;
		}
		.extension-search {
			margin-right: auto;
			margin-left: 0;
		}
		.wpjm-extension-search-button {
			padding: 0 15px;
			margin-bottom: 0;
		}
	}
}
/* ... */

